plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id "io.sentry.jvm.gradle" version "6.1.0"
    id 'com.diffplug.spotless' version '6.25.0'
}

spotless {
    java {
        target 'src/**/*.java'
        googleJavaFormat('1.17.0').aosp()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'popspot-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-websocket-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.0.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // 1. 웹 관련 기능 (UriComponentsBuilder, RestTemplate 사용 시 필수)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // 2. JSON 처리 라이브러리 (ObjectMapper, JsonNode 사용 시 필수)
    // 스프링 부트 웹 스타터에 기본 포함되어 있지만, 에러가 난다면 명시적으로 추가해야 합니다.
    implementation 'com.fasterxml.jackson.core:jackson-databind'
// [1] LangChain4j 스프링 부트 통합팩
    implementation 'dev.langchain4j:langchain4j-spring-boot-starter:0.36.0'
    // Groq 는 OpenAI API 호환이므로 langchain4j-open-ai 사용
    implementation 'dev.langchain4j:langchain4j-open-ai:0.36.0'
    implementation 'org.json:json:20231013'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'com.algolia:algoliasearch-apache:3.16.1'
    implementation 'org.postgresql:postgresql'
    // 🔥 [임의 추가] 실제 JWT 토큰 발급 및 검증을 위한 jjwt 라이브러리 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'io.sentry:sentry-spring-boot-starter:7.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // 🔥 [추가] Rate Limiting (브루트포스/이메일 폭탄 방어)
    implementation 'com.bucket4j:bucket4j-core:8.10.1'

    // 🔥 [추가] Flyway (운영에서 ddl-auto=validate 와 함께 마이그레이션 관리)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
}

tasks.named('test') {
    useJUnitPlatform()
}
sentry {
    includeSourceContext = false
    org = "kimdonghyun-oz"
    projectName = "java-spring-boot"
    authToken = System.getenv("SENTRY_AUTH_TOKEN")
}